<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Diary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="body">Making your content legible has never been easier.</string>
    <string name="title_activity_main_intro">MainIntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="notes">Your Notes</string>
    <string name="audio_notes">Audio Notes</string>
    <string name="about">Notes is the best place to jot down quick thoughts or to save longer notes filled with checklists, images, web links, scanned documents, handwritten notes, or sketches. And with iCloud, its easy to keep all your devices in sync, so you’ll always have your notes with you.</string>
    <string name="tab_all">All Notes</string>
    <string name="tab_personal">Personal</string>
    <string name="tab_work">Work</string>
    <string name="tab_study">Study</string>
    <string name="tab_settings">Setting</string>
    <string name="note">Note</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="title">Title</string>
    <string name="write_a_note" tools:ignore="TypographyEllipsis">Write a note...</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="change_password">Change password</string>
    <string name="forget_password">Forget password</string>

    <string-array name="labels">
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
    </string-array>
</resources>