<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_backgroun_cyan1"
    android:elevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/nib_back"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:backgroundTint="@color/pinkSecondaryDark"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center_horizontal"
            android:text="@string/note"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/nib_back"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toEndOf="@+id/nib_back"
            app:layout_constraintTop_toTopOf="@+id/nib_back" />

        <ImageButton
            android:id="@+id/btn_tts"
            android:layout_width="28dp"
            android:layout_height="0dp"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/menu"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_microphone_widget_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="99dp"
            android:layout_height="65dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/pinkSecondaryDark"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/nib_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nib_back"
            app:layout_constraintVertical_bias="0.666" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>